--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
     <div class="row justify-content-center">
       <div class="col-md-12">
         <div class="row justify-content-center overflow-hidden">
-          <div class="col-md-6">
+          <div class="col-md-7">
             <div class="banner_content justify-content-center wow fadeInLeft" data-wow-duration="2s" data-wow-delay=".2s">
               <h1 class="type-text">Mayer Doa Sanjida Enterprise</h1>
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
-              <a class="btn btns " href="#about">About Us</a>
-              <a class="btn btns m_l" href="#">Download CV</a>
+              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus aspernatur quisquam inventore vel harum dolores rem quaerat molestias, qui quos earum corrupti quibusdam. Iure minima ratione quia sunt nesciunt!</p>
+              <!-- <a class="btn btns " href="#about">About Us</a>
+              <a class="btn btns m_l" href="#">Download CV</a> -->
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-5">
             <div class="banner_image wow fadeInRight" data-wow-duration="2s" data-wow-delay=".2s" >
-              <img src="assets/img/mayer-doa-banner-2.jpg" alt="">
+              <img src="assets/img/main-banner-2.jpg" alt="">
             </div>
           </div>
         </div>
